# Defi-Hot-wallet-Rust

./: .env  .env                    # add a fixed test encryption key  .gitattributes  .gitignore  .pre-commit-config.yaml  Cargo.toml  CodeBAD_REQUEST -- src  Select-String -Pattern Unsupported chain # 定位剩余未改处  Dockerfile  Dockerfile.test  PULL_REQUEST_TEMPLATE.md  README.md  README_HOOKS.md  SECURITY.md  build.rs  check_and_test.ps1  check_and_test.sh  ci.yml  config.toml  custom-config.toml  fix-bom-issues.ps1  fix-bom.ps1  mod.rs  nextest.toml  package-lock.json  run-bridge-tests.ps1  run-corrected-tests.ps1  run-tests.ps1  run-wallet-tests.ps1  run_coverage.bat  srcapiserverhandlers.rs  tarpaulin-report.html  test-all-bridges.ps1  tests-backup.patch  tests-fix.patch  utils.rs  wallet.json  wallets.db  TEMPwallet_err2.txt
.cargo/: audit.toml  config  config.toml  config.toml.bak
.config/: nextest.toml
.git_backup/: COMMIT_EDITMSG  HEAD  ORIG_HEAD  index  packed-refs
.git_backup/logs/refs/: stash
.git_backup/logs/refs/heads/: 50-percent-test-coverage  Realistic-test-pass-rate-of-over-80%  backup_before_reset  disable-auto-release  disable-auto-release-ci  (+3 more)
.git_backup/objects/info/: commit-graph
.git_backup/objects/pack/: pack-8982170297fe6f8caacc1d5e05c0264ae4566682.idx  pack-8982170297fe6f8caacc1d5e05c0264ae4566682.rev  pack-a393d605479b69dcb83ecbeef4866337ac64fd8c.idx
.git_corrupt/: COMMIT_EDITMSG  HEAD  config  index
.git_corrupt/info/: refs
.git_corrupt/logs/: HEAD
.git_corrupt/objects/info/: packs
.git_corrupt/objects/pack/: pack-a393d605479b69dcb83ecbeef4866337ac64fd8c.rev
.github/: copilot-instructions.md
.github/workflows/: alert.yml  audit.yml  backup.yml  ci.yml  ci.yml.bak  clippy.yml  codeql-analysis.yml  coverage.yml  deps.yml  doc.yml  merge-conflict.yml  release.yml  rust-ci.yml  rustfmt.yml  super-linter.yml  test_ci.yml
.husky_bak/: _  _husky.sh  pre-commit  pre-commit.bat  pre-push  pre-push.bat
Defi-Hot-wallet-Rust/: Cargo.toml (to be modified)
Defi-Hot-wallet-Rust/Defi-Hot-wallet-Rust/: Cargo.toml  README.md
Defi-Hot-wallet-Rust/Defi-Hot-wallet-Rust/.github/workflows/: ci.yml
Defi-Hot-wallet-Rust/Defi-Hot-wallet-Rust/patches/: elliptic-curve-tools
Defi-Hot-wallet-Rust/Defi-Hot-wallet-Rust/src/: lib.rs  main.rs
Defi-Hot-wallet-Rust/Defi-Hot-wallet-Rust/src/blockchain/: ethereum.rs
Defi-Hot-wallet-Rust/Defi-Hot-wallet-Rust/tests/: test_request_tests.rs
Defi-Hot-wallet-Rust/tests/: property_tests.rs
Defi-Hot-wallet-Rust/tests/common/: mock_blockchain.rs  test_helpers.rs
docs/: 1_architecture_blueprint.md  2_security_patch_list.md  3_priority_table.md  4_analysis_doc.md  5_ode_review_plan.md  6_test_matrix.md  7_threat_model.md  8_key_management_policy.md  9_incident_response_runbook.md  API.md  CODE_REVIEW_PLAN.md  PRIORITY_LIST.md  REQUIREMENT_BREAKDOWN.md  SECURITY.md  SECURITY_PATCHES.md  TEST_MATRIX.md  WALLET_DESIGN.md  mvp_checklist.md
examples/: basic_usage.rs  demo.sh
patches/elliptic-curve-tools/: Cargo.toml
patches/elliptic-curve-tools/src/: lib.rs  mod.rs  serdes.rs  sum_of_products.rs
patches/elliptic-curve-tools/tests/: serdes_roundtrip.rs
resources/i18n/: en.ftl  zh.ftl
scripts/: check_braces.sh
src/: cli.rs  key_management.rs  lib.rs  main.rs  mvp.rs  shamir.rs  test_env.rs  utils.rs  validation.rs
src/adapter/: adapter.rs
src/api/: api_additional_tests.rs  api_bridge_env_compat.rs  api_bridge_stable_tests.rs  api_server_tests.rs  api_stress_tests.rs  bridge_api_env_tests.rs  handlers.rs  mod.rs  server.rs  types.rs
src/application/: application.rs  mod.rs  service.rs
src/audit/: alert.rs  audit_confirmation_tests.rs  audit_rollback_tests.rs  backup.rs  confirmation.rs  logging.rs  mod.rs  network_rate_limit_tests.rs  operation_log.rs  ops_backup_tests.rs  ops_health_tests.rs  rate_limit.rs  rollback.rs
src/blockchain/: blockchain_ethereum_tests.rs  bridge.rs  bridge_backup.rs  client.rs  ethereum.rs  mod.rs  solana.rs  traits.rs
src/blockchain/bridge/: bridge_additional_tests.rs  mock.rs  mod.rs  relay.rs  tests.rs  transfer.rs
src/config/: config.rs  env_config.rs  mod.rs  mod.rs.backup
src/core/: application.rs  bridge_test.rs  config.rs  domain.rs  error.rs  errors.rs  infrastructure.rs  key_management.rs  mod.rs  validation.rs  wallet.rs  wallet_info.rs  wallet_manager.rs
src/core/wallet/: backup.rs  create.rs  recover.rs
src/crypto/: en.ftl  hsm.rs  kdf.rs  mod.rs  multisig.rs  quantum.rs  shamir.rs
src/i18n/: localization.rs  mod.rs
src/infrastructure/: infrastructure.rs
src/interface/: interface.rs
src/monitoring/: mod.rs
src/network/: mod.rs  node_manager.rs  rate_limit.rs
src/ops/: backup.rs  health.rs  metrics.rs  mod.rs  ops_backup_tests.rs  ops_metrics_tests.rs
src/plugin/: event_bus.rs  middleware.rs  mod.rs  plugin.rs  plugin_manager.rs
src/security/: access_control.rs  anti_debug.rs  compliance.rs  encryption.rs  memory_protection.rs  mod.rs  shamir.rs
src/service/: di_container.rs  mod.rs  service.rs  wallet.rs
src/storage/: mod.rs
src/tools/: async_support.rs  error.rs  generator.rs  mod.rs  serdes.rs  sum_of_products.rs
tests/: api_handlers_tests.rs  api_server_tests.rs  api_tests.rs  application_tests.rs  audit_alert_tests.rs  audit_confirmation_tests.rs  audit_rollback_tests.rs  audit_tests.rs  balance_query.rs  basic_test.rs  blockchain_ethereum_address_tests.rs  blockchain_ethereum_balance_fee_tests.rs  blockchain_ethereum_transaction_tests.rs  bridge.rs  bridge_additional_unit_tests.rs  bridge_api_negative_tests.rs  bridge_integration.rs  bridge_tests.rs  bridge_unit_tests.rs  ci.yml  cli_create.rs  cli_integration.rs  cli_tests.rs  config.toml  config_tests.rs  core_wallet_manager_tests.rs  crypto_shamir_tests.rs  elliptic_curve_sum_of_products_tests.rs  errors_tests.rs  ethereum_tests.rs  handlers_unit_tests.rs  hello_world.rs  hello_world_tests.rs  integration_tests.rs  lib_tests.rs  localization_tests.rs  main_integration.rs  mod.rs  mvp_checklist.rs  network_rate_limit_tests.rs  (+21 more)
tools/: mock_rpc.py  run_tests.sh
(+11 files in other folders)
