[package]
name = "defi-hot-wallet"
version = "0.1.0"
edition = "2021"
authors = ["Yinhang3377"]
description = "A secure DeFi hot wallet with quantum-safe encryption, multi-sig, and cross-chain features."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Yinhang3377/Defi-Hot-wallet-Rust"
keywords = ["blockchain", "defi", "wallet", "quantum-safe", "cryptography"]
categories = ["cryptography", "command-line-utilities", "network-programming"]

[lib]
name = "defi_hot_wallet"
path = "src/lib.rs"

[workspace]
members = [
    # ...existing members...
    "patches/elliptic-curve-tools",
]

[dependencies]
# core / runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tokio-util = "0.7"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# crypto primitives
sha2 = "0.10"
sha3 = "0.10"
aes-gcm = "0.10"
chacha20poly1305 = "0.10.1"
hkdf = "0.12.4"
pbkdf2 = "0.12.2"
scrypt = "0.11.0"
shamir = "1.0.2"
zeroize = { version = "1.8.1", features = ["derive"] }
argon2 = { version = "0.5.3" }
base64 = "0.22"
rand = { version = "0.8", features = ["std"] }
rand_core = "0.6"
aead = "0.5"
ring = "0.17.8"

# elliptic / curve crates - unified to 0.13 series and enable serde features
elliptic-curve = { version = "0.13", features = ["alloc", "serde"] }
ecdsa = { version = "0.13.4", features = ["serde"] }

k256 = { version = "0.13", features = ["arithmetic", "serde"] }
p256 = { version = "0.13", features = ["arithmetic", "serde"] }
p384 = { version = "0.9", features = ["serde"] }

curve25519-dalek = "4.0"
curve25519-dalek-ml = { version = "4.2", features = ["group", "group-bits"] }
blsful = "2.5"
ed448-goldilocks-plus = "0.16"

# blockchain / integrations
ethers = { version = "2.0", features = ["abigen", "rustls", "ws"] }

# BIP standards
bip39 = "2.0"
bip32 = "0.5"
coins-bip32 = "0.8"
coins-bip39 = "0.8"

# serialization / storage
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
bincode = "1.3"
serde_cbor = "0.11"
serde_bare = "0.5"
postcard = { version = "1.0", features = ["alloc", "use-std"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }

# database
sqlx = { version = "0.7", default-features = false, features = ["sqlite", "chrono", "runtime-tokio", "macros", "tls-rustls"] }

# http / cli / utils
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["limit", "trace"] }
clap = { version = "4.5", features = ["derive"] }

# misc utilities
anyhow = "1.0"
thiserror = "1.0"
hex = "0.4"
bytes = "1.5"
uuid = { version = "1.0", features = ["v4", "serde"] }
lazy_static = "1.4"
once_cell = "1.19"
parking_lot = "0.12"
log = "0.4"
regex = "1.10"
fluent = "0.16"
fluent-bundle = "0.15"
intl-memoizer = "0.5"
async-trait = "0.1"
cookie = "0.18"
base58 = "0.2.0"
bs58 = "0.5"
itertools = "0.13"

# monitoring / metrics
prometheus = { version = "0.13.4", default-features = false, features = ["process"] }
protobuf = "3.5.0"

# local patched crate used by tests/build
elliptic-curve-tools = { path = "patches/elliptic-curve-tools", features = ["alloc", "std", "sop_patch_tests"] }

# small helpers
rstest = "0.18"
governor = "0.6"

[features]
default = []
std = ["alloc", "elliptic-curve-tools/std"]
alloc = ["elliptic-curve-tools/alloc"]
strict_security = []
sop_patch_tests = ["elliptic-curve-tools/sop_patch_tests"] # Note: this feature was already present
memlock = ["dep:libc", "dep:winapi"]
yaml = []
msgpack = []

[dev-dependencies]
# dev/test environment should use same curve versions (serde enabled)
k256 = { version = "0.13", features = ["arithmetic", "serde"] }
p256 = { version = "0.13", features = ["arithmetic", "serde"] }
p384 = { version = "0.9", features = ["serde"] }

elliptic-curve-tools = { path = "patches/elliptic-curve-tools", features = ["alloc", "std"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
criterion = "0.5"
tempfile = "3.8"
test-log = "0.2"
assert_cmd = "2.0"
axum-test = "16.0"
serial_test = "3.0"
bincode = "1.3.3"
serde_yaml = "0.9"
serde_json = "1.0"
curve25519-dalek-ml = { version = "4.2", features = ["group", "group-bits"] }
blsful = "2.5"
ed448-goldilocks-plus = "0.16"
heapless = "0.8"
postcard = { version = "1.0", features = ["alloc", "use-std"] }
serde_bare = "0.5"
serde_cbor = "0.11"
ciborium = "0.2"
mockall = "0.12"
rand = "0.8.5"
proptest = "1.2.0"
httpmock = "0.7"
pretty_assertions = "1.4.1"
test-case = "3.3.1"

# msgpack helpers for tests
rmp-serde = "1.1"
rmp = "0.8"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.57.0", features = ["Win32_System_Memory", "Win32_Foundation", "Win32_System_Diagnostics_Debug"] }
# Add winapi because code directly references winapi::shared::minwindef etc.
# VirtualLock/VirtualUnlock are in winapi::um::memoryapi; select relevant features.
winapi = { version = "0.3", features = ["memoryapi", "minwindef", "winbase", "winnt"], optional = true }

[dependencies.libc]
version = "0.2"
optional = true

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
debug = true

[profile.dev]
debug = true

[[bin]]
name = "hot_wallet"
path = "src/main.rs"

[[bin]]
name = "wallet-cli"
path = "src/cli.rs"

[[bin]]
name = "bridge_test"
path = "src/bin/bridge_test.rs"

[patch.crates-io]
# prefer local patch for tests/build
elliptic-curve-tools = { path = "patches/elliptic-curve-tools" } # Note: remove other version-only entries (crypto-bigint / k256 / p256 / elliptic-curve / group / ff)
# If you need to force specific versions across the workspace, use [patch.crates-io] with a git/path source
# or align dependency versions in [dependencies]/[dev-dependencies] instead.