[package]
name = "elliptic-curve-tools"
version = "0.1.3"
edition = "2021"

[dependencies]
elliptic-curve = { version = "0.13.8", features = ["alloc", "bits", "serde"] }
zeroize = { version = "1.8", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"

[dev-dependencies]
# use k256 aligned to elliptic-curve 0.13.x for real-curve tests
k256 = { version = "0.13", features = ["arithmetic"] }
serde_json = "1.0"

[features]
# expose both alloc and std feature flags so workspace consumers can enable either
default = ["std"]
std = []
alloc = []
sop_patch_tests = []
